--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "body-parser": "~1.9.1",
     "express": "~4.9.8",
     "supervisor": "~0.6.0",
-    "webkit-devtools-agent": "~0.3.1"
+    "webkit-devtools-agent": "~0.3.1",
+    "docco": "0.6.x"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/jaimeagudo/sofiatree.git"
   },
   "scripts": {
-    "test": "node example.js"
+    "test": "node example.js",
+    "doc": "docco sofia-tree.js"
   },
   "analyze": true
 }
