--- a/package.json
+++ b/package.json
@@ -5,25 +5,31 @@
   "author": "Jaime Agudo <jaime.agudo.lopez@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "uglifyjs": "~2.3.6",
+    "docco": "~0.6.3"
   },
   "main": "sofia-tree.js",
   "devDependencies": {
-    "underscore": "~1.7.0",
     "body-parser": "~1.9.1",
+    "chai": "^1.9.2",
+    "docco": "0.6.x",
     "express": "~4.9.8",
+    "mocha": "^2.0.1",
+    "sinon": "^1.11.1",
     "supervisor": "~0.6.0",
-    "webkit-devtools-agent": "~0.3.1",
-    "docco": "0.6.x"
+    "underscore": "~1.7.0",
+    "webkit-devtools-agent": "~0.3.1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/jaimeagudo/sofiatree.git"
   },
   "scripts": {
-    "test": "node example.js",
-    "doc": "docco sofia-tree.js",
-    "prepublish": "uglifyjs sofia-tree.js -c \"evaluate=false\" -m --source-map sofia-tree-min.map -o sofia-tree-min.js",
-    "build": "uglifyjs sofia-tree.js -c \"evaluate=false\" -m --source-map sofia-tree-min.map -o sofia-tree-min.js"
+    "test": "mocha",
+    "example": "node example.js",
+    "doc": "docco *.js",
+    "uglify": "uglifyjs sofia-tree.js -c \"evaluate=false\" -m --source-map sofia-tree-min.map -o sofia-tree-min.js",
+    "prepublish": "npm doc && npm build"
   },
   "analyze": true
 }
