--- a/package.json
+++ b/package.json
@@ -26,10 +26,9 @@
   },
   "scripts": {
     "test": "mocha",
-    "example": "node example.js",
-    "doc": "docco *.js",
-    "uglify": "uglifyjs sofia-tree.js -c \"evaluate=false\" -m --source-map sofia-tree-min.map -o sofia-tree-min.js",
-    "prepublish": "npm doc && npm build"
+    "example": "node example/server.js",
+    "doc": "docco sofia-tree.js && docco example/server.js",
+    "uglify": "uglifyjs sofia-tree.js -c \"evaluate=false\" -m --source-map sofia-tree-min.map -o sofia-tree-min.js"
   },
   "analyze": true
 }
