--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "sofia-tree",
-  "version": "0.0.2",
-  "description": "A kind of Radix Tree data structure baptized 'Sofia Tree' in honour to my beloved daughter. A multinode tree with a level for each letter with fast lookup operations.",
+  "version": "0.0.3",
+  "description": "A kind of Radix Tree data structure. A multinode tree with a level for each letter with fast lookup operations to support autocomplete as you type features.",
   "author": "Jaime Agudo <jaime.agudo.lopez@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-  },
+  "keywords":[
+    "autocomplete",
+    "radix",
+    "sofia",
+    "patricia",
+    "tree",
+    "type"
+  ],
+  "dependencies": { },
   "main": "sofia-tree.js",
   "devDependencies": {
     "express": "~4.9.8",
