--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "sofia-tree",
-  "version": "0.0.6",
-  "description": "A kind of Radix Tree data structure. A fast in-memory dictionary for autocomplete as you type features.",
+  "version": "0.0.7",
+  "description": "A fast in-memory dictionary for autocomplete as you type features based on a trie data structure.",
   "author": "Jaime Agudo <jaime.agudo.lopez@gmail.com>",
   "license": "MIT",
   "keywords":[
     "auto-complete",
     "autocomplete",
     "complete",
+    "trie",
     "radix",
+    "typeahead",
     "sofia",
     "patricia",
     "tree",
     "type",
-    "typeahead",
     "memory",
     "dictionary"
   ],
