--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "coveralls": "jscoverage lib && SOFIATREE_COVERAGE=1 nodeunit --reporter=lcov test | coveralls",
     "example": "node example/server.js",
     "doc": "docco lib/sofia-tree.js && docco example/server.js",
-    "uglify": "uglifyjs sofia-tree.js -c \"evaluate=false\" -m --source-map sofia-tree-min.map -o sofia-tree-min.js"
+    "uglify": "uglifyjs lib/sofia-tree.js -c \"evaluate=false\" -m --source-map sofia-tree-min.map -o dist/sofia-tree-min.js && rm sofia-tree-min.map"
   },
   "analyze": true
 }
