--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "body-parser": "~1.9.1",
     "supervisor": "~0.6.0",
     "webkit-devtools-agent": "~0.3.1",
-    "uglifyjs": "~2.3.6",
+    "uglifyjs": "^2.3.6",
     "docco": "~0.6.3",
     "coveralls": "^2.11.2",
     "docco": "0.6.x",
